//qt 存在 setDefaultAction 后 再在代码中设置setChecked会导致按钮状态不正确的bug //https://bugreports.qt.io/browse/QTBUG-95255 1.修改由此导致的问题